Header bar in correct positions but spacing is still off

--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,27 @@ body {
     background: #142d63;
 }
 
-#navButtons {
+#bongocat {
+    height: 100px;
+    width: 100px;
 
 }
 
 #titleHeader {
-    display: inline;
+    display: flex;
+    align-items: center;
 }
 
 #headTitle {
     display: inline;
     color: #142d63;
+}
+
+#stopSoundButton {
+    margin-top: 10px;
+    max-width: 200px;
+    display: flex;
+    justify-content: center;
 }
 
 p {
@@ -22,6 +32,10 @@ p {
 h2 {
     color: #a828ed;
     display: inline;
+}
+
+.readOptions {
+    display: flex;
 }
 
 #noScroll {
@@ -34,25 +48,27 @@ h2 {
     position: fixed;
     top: 0;
     left: 0;
-    padding-bottom: 10px;
-    padding-left: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #pageContent {
-    margin-top: 140px;
+    margin-top: 200px;
     text-align: center;
 }
 
-.dropdownLabels {
+.labelGroupings {
     color: #c6eb34;
-    display: inline;
+    display: flex;
+}
+
+.dropdownLabels {
+    padding-right: 5px;
 }
 
 #dropdownDiv {
-    display: inline;
     padding-right: 2em;
-}
-
-#bongoSelect {
-    display: inline;
 }
